--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "7860:7860"
     environment:
-      SERVER_URL: "http://masrv:11435/v1/audio/speech"
-      VOICES: MarkusReinsurance,MarkusReinsurance2,MarkusRueckversicherung,NarratorHungerGames,NarratorDiscworld,alloy,echo,fable,onyx,nova,shimmer
+      SERVER_URL: "http://localhost:11435/v1/audio/speech" # put your openai speech endpoint here
+      VOICES: alloy,echo,fable,onyx,nova,shimmer
       MODELS: tts-1-hd,tts-1
     command: ["python", "app.py"]
